--- a/.github/workflows/generate-pdf-list.yml
+++ b/.github/workflows/generate-pdf-list.yml
@@ -1,4 +1,4 @@
-name: Generate PDF List for GitHub Pages
+name: Update PDF List on Site Repo
 
 on:
   push:
@@ -8,16 +8,18 @@ on:
       - '**/*.pdf'
 
 jobs:
-  generate-pdf-list:
+  update-pdf-list:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
+      # Step 1: Clona il repository "Byte-Your-Dreams/Documents"
+      - name: Check out Documents repository
         uses: actions/checkout@v2
 
+      # Step 2: Genera il file JSON con i PDF e la struttura delle cartelle
       - name: Generate PDF list JSON
         run: |
-          mkdir -p public
+          mkdir -p pdf_data
           # Trova tutti i file PDF e crea una struttura JSON con il percorso completo
           find Documents -type f -name "*.pdf" | jq -R -s '
           split("\n") | map(select(length > 0)) |
@@ -25,14 +27,28 @@ jobs:
             path: ., 
             name: (.|split("/"))[-1],
             folder: (.|split("/")[1:-1]|join("/"))
-          })' > public/pdf_list.json
+          })' > pdf_data/pdf_list.json
 
-      - name: Push JSON to GitHub Pages
+      # Step 3: Clona la repository del sito dove verrà pubblicato il JSON
+      - name: Check out Site Repository
+        uses: actions/checkout@v2
+        with:
+          repository: olliker/site.github.io
+          path: site_repo
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }} # Assicurati di configurare questo token nei Secrets della repository
+
+      # Step 4: Copia il JSON nella repository del sito e pubblicalo
+      - name: Copy JSON to Site Repository
         run: |
+          cp pdf_data/pdf_list.json site_repo/public/pdf_list.json
+
+      - name: Commit and Push JSON to Site Repo
+        run: |
+          cd site_repo
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add public/pdf_list.json
-          git commit -m "Update PDF list"
+          git commit -m "Update PDF list in site repo"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
